Fixed bug with scrolling tables in the campaign manager.  The scrolling rows were visible for a couple of pixels just above the thead section.  Fixed by adding a wrapper, with overflow: hidden around the table-fixed-container div.

--- a/includes/style/scss/thetaste-venue.scss
+++ b/includes/style/scss/thetaste-venue.scss
@@ -8,7 +8,7 @@ $spacers: (
 		(
 			10%,
 		)
-		// 80% -> form inputs became 10% shorter on width from each side,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
+		// 80% -> form inputs became 10% shorter on width from each side,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
 );
 
 @import "../bootstrap/scss/bootstrap";
@@ -168,6 +168,14 @@ h2.col-heading_profile {
 	margin: 10px 0;
 }
 
+.table-fixed-wrapper {
+	position: relative;
+	border: 1px solid #000;
+	background: #efefef;
+	overflow: hidden;
+	border-radius: 7px;
+}
+
 .table-fixed {
 	border: none;
 }
@@ -194,7 +202,8 @@ h2.col-heading_profile {
 
 .table-fixed-container {
 	overflow-y: scroll;
-	border-top: 1px solid #ddd;
+	border: none;
+	margin-top: -1px;
 }
 
 .table-fixed-container thead th {
